<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Parte_Trabajo</string>

    <string name="hello_world">Hello world!</string>
    <string name="fecha">Fecha</string>
    <string name="euros">Euros €</string>
    <string name="euros_litro">Euros Litro €/L</string>
    <string name="add">Guardar</string>
    <string name="litros">Litros</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="coche_matricula">Matricula Coche</string>
    <string name="add_new_coche">Nuevo Coche</string>
    <string name="all_coches">Todos los Coches</string>
    <string name="no_coche_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No hay Coches creados.</string>
    <string name="empty_fields_message">Uno o más campos están vacíos.</string>
    <string name="salary">Salary</string>
    <string name="all_repostaje">Todos los Repostajes</string>
    <string name="no_repostaje_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No hay Repostajes creados.</string>
    <string name="add_new_repostaje">Nuevo Respostaje</string>
    <string name="select_a_coche">Selecciona un coche</string>
    <string name="delete">Borrar</string>
    <string name="coche_deleted_successfully">Coche borrado correctamente</string>
    <string name="repostaje_deleted_successfully">Respostaje borrado correctamente</string>
    <string name="coche_created_successfully">Coche añadido correctamente</string>
    <string name="repostaje_created_successfully">Respostaje añadido correctamente</string>
    <string name="Button_Nuevo">Nuevo</string>
    <string name="Button_Historico">Histórico</string>
    <string name="Button_Salir">Salir</string>
    <string name="Text_Diaro">Diario</string>
    <string name="text_Fecha">New Text</string>
    <string name="Text_Fecha">Fecha:</string>
    <string name="title_activity_diario">Diario</string>
    <string name="title_activity_historico">Historico</string>
    <string name="TextCAU">CAU</string>
    <string name="TextCliente">Cliente</string>
    <string name="TextSolucion">Solución</string>
    <string name="Text_Enviar">Enviar</string>
    <string name="Text_Cancelar">Cancelar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="add_coche">Crear Coche</string>
    <string name="cerrar">Cerrar</string>
    <string name="editar_coche">Editar Coche</string>
    <string name="delete_coche">Borrar Coche</string>
    <string name="add_repostaje">Crear Repostaje</string>
    <string name="edit_repostaje">Editar Repostaje</string>
    <string name="delete_repostaje">Borrar Repostaje</string>
    <string name="repostaje">Repostaje</string>
    <string name="btnCoche">Coche</string>
    <string name="textViewMatriucla">Matricula</string>
    <string name="action_settings">Settings</string>
    <string name="eror_matricula">Matrícula mal formada</string>
    <string name="repostaje_edited_successfully">Repostaje Editado Correctamente</string>
    <string name="cau_nombre">Nombre CAU</string>
    <string name="cau_created_successfully">CAU creado correctamente</string>
    <string name="all_cau">Todos los CAU</string>
    <string name="no_cau_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No hay CAUs creados</string>
    <string name="editar_cau">Editar CAU</string>
    <string name="delete_cau">Eliminar CAU</string>
    <string name="Button_Repostaje">Repostaje</string>
    <string name="coche">Coche</string>
    <string name="cliente_nombre">Nombre Cliente</string>
    <string name="solucion_nombre">Nombre Solución</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="delete_cliente">Eliminar Cliente</string>
    <string name="delete_solucion">Eliminar Solcuión</string>
    <string name="editar_solucion">Editar Solución</string>
    <string name="all_clientes">Todos los Clientes</string>
    <string name="no_clientes_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No hay Clientes creados</string>
    <string name="all_soluciones">Todas las Soluciones</string>
    <string name="no_solucion_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No hay Soluciones creadas</string>
    <string name="cliente_created_successfully">Cliente creado correctamente</string>
    <string name="cliente_edited_successfully">Cliente modificado correctamente</string>
    <string name="coche_edited_successfully">Coche modificado correctamente</string>
    <string name="cau_edited_successfully">Cau modificado correctamente</string>
    <string name="solucion_created_successfully">Solución creada correctamente</string>
    <string name="solucion_edited_successfully">Solución modificada correctamente</string>
    <string name="diario_created_successfully">Diario creado correctamente</string>
    <string name="diario_edited_successfully">Diario editado correctamente</string>
    <string name="add_cau">Crear CAU</string>
    <string name="add_cliente">Crear Cliente</string>
    <string name="add_solucion">Crear Solución</string>
    <string name="select_a_cau">Selecciona un CAU</string>
    <string name="kms">Kilómetros</string>
    <string name="select_a_cliente">Selecciona un Cliente</string>
    <string name="hora_ini">Hora de inicio:</string>
    <string name="hora_fin">Hora de Finalización:</string>
    <string name="desplazamiento">Duración de desplazamiento:</string>
    <string name="select_a_solucion">Selecciona una Solución</string>
    <string name="all_diario">Diario</string>
    <string name="no_diario_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No hay ningún Diario creado</string>
    <string name="delete_diario">Eliminar Diario</string>
    <string name="edit_diario">Editar Diario</string>
    <string name="cau">CAU</string>
    <string name="cliente">Cliente</string>
    <string name="solucion">Solución</string>
    <string name="diario">Diario</string>
    <string name="inicio">Inicio</string>
    <string name="TextViewCAU">CAU:</string>
    <string name="textviewCliente">Cliente:</string>
    <string name="textview_solucion">Solución:</string>
    <string name="textview_euros">Euros:</string>
    <string name="textview_euros_litro">Euros / Litro:</string>
    <string name="textview_litros">Litros:</string>
    <string name="textview_coche">Coche:</string>
    <string name="textview_desplazamiento">Duración Desplazamiento:</string>
    <string name="textview_kms">Kilómetros:</string>
    <string name="hora_ini_mayor">La hora inicial o final errónea</string>
    <string name="minutos_ini_mayor">La hora inicial es mayor que la final.</string>
    <string name="boton_acceder">Acceder</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_usuario">Nombre de usuario</string>
    <string name="action_previous">Anterior</string>
    <string name="action_next">Siguiente</string>
    <string name="action_finish">Último</string>

    <string name="title_template_step">Paso <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="coche_kilometros">Kilómetros Actuales</string>
    <string name="cliente_codigo">Código de Cliente</string>
    <string name="buscar_cliente">Buscar Cliente</string>
    <string name="codigo_cliente">Cód. Cliente</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="text_km_ini">Kilómetros iniciales:</string>
    <string name="txt_km_actuales">Kilómetros finales:</string>
    <string name="txt_coche">Coche:</string>
    <string name="km_ini_mayor">Kilómetros iniciales mayores que actuales</string>
    <string name="Text_Excel">Enviar Excel</string>
    <string name="fecha_excel">Fecha de Cierre:</string>
    <string name="enviar">Enviar</string>
</resources>
