<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="${relativePackage}.${activityClass}" >


    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <TextView
        android:id="@+id/txtview_euros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_fecha"
        android:text="@string/textview_euros"
        android:textAppearance="?android:attr/textAppearance"
        android:layout_marginLeft="2dp" />
    <EditText
        android:id="@+id/txt_euros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/euros"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtview_euros"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/txtview_euros_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_euros"
        android:text="@string/textview_euros_litro"
        android:textAppearance="?android:attr/textAppearance"
        android:layout_marginLeft="2dp" />

    <EditText
        android:id="@+id/txt_euros_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/euros_litro"
        android:inputType="numberDecimal"
        android:lines="2"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtview_euros_litro"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/txtview_litros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_euros_litro"
        android:text="@string/textview_litros"
        android:textAppearance="?android:attr/textAppearance"
        android:layout_marginLeft="2dp" />
    <EditText
        android:id="@+id/txt_litros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/litros"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtview_litros"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/txtview_coche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_litros"
        android:text="@string/textview_coche"
        android:textAppearance="?android:attr/textAppearance"
        android:layout_marginLeft="2dp" />
    <Spinner
        android:id="@+id/spinner_coches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_a_coche"
        android:animateLayoutChanges="true"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/txtview_coche"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="88dp"
        android:layout_below="@+id/spinner_coches"
        android:layout_alignStart="@+id/txtview_coche" />

</RelativeLayout>

</ScrollView>