<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:id="@+id/RelativeLayout1">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:background="@color/red_bg_header"
        android:gravity="center"
        android:text="@string/inicio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Diaro"
        android:id="@+id/Diario"
        android:onClick="HacerDiario"
        android:nestedScrollingEnabled="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txt_header"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Excel"
        android:id="@+id/Excel"
        android:onClick="EnviarExcel"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/Diario"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentEnd="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Repostaje"
        android:id="@+id/Gasolinera"
        android:onClick="HecharGasoil"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Salir"
        android:id="@+id/Salir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Salir" />
</RelativeLayout>
