<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextUserNameToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearance"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPasswordToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:textAppearance="?android:attr/textAppearance"
        android:layout_below="@+id/editTextUserNameToLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_acceder"
        android:onClick="IniciarAplicacion"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/editTextPasswordToLogin"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button_Salir"
        android:onClick="Salir"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>