<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_desplazamiento"
        android:id="@+id/textView2"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_desplazamiento"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:inputType="text" />
    <TextView
        android:id="@+id/textview_Kmini"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:text="@string/text_km_ini"
        android:layout_below="@+id/editText_desplazamiento"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_km_ini"
        android:layout_below="@id/textview_Kmini"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:inputType="number" />
    <TextView
        android:id="@+id/textview_Kmfin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:text="@string/txt_km_actuales"
        android:layout_below="@+id/editText_km_ini"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_km_fin"
        android:layout_below="@id/textview_Kmfin"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:inputType="number" />
    <TextView
        android:id="@+id/textView_coche"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editText_km_fin"
        android:text="@string/txt_coche"/>
    <Spinner
        android:id="@+id/spinner_coches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_a_coche"
        android:animateLayoutChanges="true"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView_coche"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>