<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/txt_coche_matricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coche_matricula"
        android:layout_marginTop="24dp"
        android:inputType="text|textCapWords"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:maxLength="11" />

    <EditText
        android:id="@+id/txt_coche_kilometros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coche_kilometros"
        android:layout_marginTop="24dp"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:maxLength="11"
        android:layout_below="@+id/txt_coche_matricula"/>


    
    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/txt_coche_kilometros"
        android:layout_alignParentStart="true" />

</RelativeLayout>