<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/txt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/fecha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_euros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_fecha"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/euros"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/darker_gray" />

    <!--<TextView
        android:id="@+id/txt_euros_litro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_euros"
        android:layout_marginTop="4dp"
        android:autoLink="web"
        android:linksClickable="false"
        android:text="@string/euros_litro"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_litros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_euros_litro"
        android:layout_marginTop="4dp"
        android:autoLink="phone"
        android:linksClickable="false"
        android:text="@string/litros"
        android:textColor="@android:color/darker_gray" />
    -->
    <TextView
        android:id="@+id/txt_coche_matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coche_matricula"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/txt_euros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>