<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_cau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewCAU"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_marginLeft="3dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp" />
        <EditText
            android:id="@+id/editText_cau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:animateLayoutChanges="true"
            android:spinnerMode="dropdown"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_cau"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/txtview_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewCliente"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_below="@+id/editText_cau"
            android:layout_alignParentRight="true" />
        <EditText
            android:id="@+id/editText_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtview_cliente"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/TextView_horaini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora_ini"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_below="@+id/editText_cliente"
            android:layout_alignParentRight="true" />
        <EditText
            android:id="@+id/txt_hora_ini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TextView_horaini"
            android:layout_alignParentRight="true" />
        <TextView
            android:id="@+id/TextView_horafin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora_fin"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_below="@+id/txt_hora_ini"
            android:layout_alignParentRight="true" />
        <EditText
            android:id="@+id/txt_hora_fin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TextView_horafin"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
</RelativeLayout>